--- a/Clash/config/Reid_Vin.ini
+++ b/Clash/config/Reid_Vin.ini
@@ -4,6 +4,7 @@
 
 ;规则集
 ruleset=🏠 局域服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Lan/Lan.list
+ruleset=📥 下载服务,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/refs/heads/main/Clash/Ruleset/DownloadProcess.list
 ruleset=🤓 私人服务,https://raw.githubusercontent.com/Reid-Vin/ACL4SSR/main/Clash/Customizable-Direct.list
 ruleset=☎️ 国外-DNS,https://raw.githubusercontent.com/Reid-Vin/OpenClash_Custom_Rules_for_ios_rule_script/main/Clash/Ruleset/foreignDNS.list
 ruleset=🤖 其他智能,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
@@ -38,6 +39,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=☑️ 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🎯 不走代理`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]😡 歇斯底里`[]🎥 奈飞选择`[]🎥 奈飞自动`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3
 custom_proxy_group=🤓 私人服务`select`[]🎯 不走代理`[]☑️ 节点选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]😡 歇斯底里`[]🎥 奈飞选择`[]🎥 奈飞自动`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3
 custom_proxy_group=☎️ 国外-DNS`select`[]🇭🇰 香港节点`[]☑️ 节点选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🎯 不走代理`[]❌ 拒绝请求`[]🔒 私人节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]😡 歇斯底里`[]🎥 奈飞选择`[]🎥 奈飞自动`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3
+custom_proxy_group=📥 下载服务`select`[]🎯 不走代理`[]☑️ 节点选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]😡 歇斯底里`[]🎥 奈飞选择`[]🎥 奈飞自动`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3
 custom_proxy_group=🤖 OPAI助手`select`[]💡 GPT节点`[]☑️ 节点选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🎯 不走代理`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]😡 歇斯底里`[]🎥 奈飞选择`[]🎥 奈飞自动`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3
 custom_proxy_group=🤖 微软助手`select`[]☑️ 节点选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🎯 不走代理`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]😡 歇斯底里`[]🎥 奈飞选择`[]🎥 奈飞自动`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3
 custom_proxy_group=🤖 谷歌助手`select`[]☑️ 节点选择`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🎯 不走代理`[]❌ 拒绝请求`[]🔒 私人节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]EL 其他国家`[]💡 GPT节点`[]🔗 IPV6节点`[]🔃 中转节点`[]✈️ 优化节点`[]💎 专线节点`[]😡 歇斯底里`[]🎥 奈飞选择`[]🎥 奈飞自动`[]🗑️ 垃圾节点`[]✨ 指定节点1`[]✨ 指定节点2`[]✨ 指定节点3
